--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,14 +16,12 @@ header {
     height: 20%;
     padding: 30px 0;
 }
-
 h1 {
     font-family: 'Astloch', cursive;
     font-size: 5em; 
     text-align: center;
     color: #EDEEC0;
 }
-
 hr {
     width: 70%;
     border: 0;
@@ -41,20 +39,16 @@ h2 {
     margin-bottom: 25px;
     line-height: 1.5em;
 }
-
 h2, p, li {
     font-family: 'Gill Sans','Gill Sans MT','Calibri',sans-serif; 
 }
-
 p, li {
     color: #482728;
     font-size: 18px;
 }
-
 p {
     line-height: 2em;
 }
-
 li {
     background: #E1B07E;
     margin: 20px auto;
@@ -63,40 +57,32 @@ li {
     text-align: center;
     box-shadow: 0 10px 6px -8px #433E0E;
 }
-
 li:hover {
     background: #cf8030;
     transition: all 0.5s;
 }
-
 li:active {
     background: #a56627;
     transition: all 0.5s;
 }
-
 .container, .timer-box {
     margin: 30px auto;
     box-shadow: 0 10px 6px -8px #433E0E;
 }
-
 .container {
     width: 50%;
     background-color: #EDEEC0;
 }
-
 .question-box, .result-box, .final-result-box {
     padding: 20px 30px;
 }
-
 .container hr {
     background-image: linear-gradient(to right, transparent, #433E0E, transparent);
     margin-bottom: 25px;
 }
-
 img {
     margin-bottom: 20px;
 }
-
 button {
     font-family: 'Astloch', cursive;
     font-size: 2em;
@@ -106,16 +92,17 @@ button {
     padding: 10px 20px;
     border: none;
 }
+.main-content {
+    min-height: calc(100vh - 110px);
+}
 
 /* Timer Styles *********************************************/
 
 .timer-box {
     width: 7%;
     text-align: center;
-    
     background: #433E0E;
 }
-
 #timer {
     font-family: 'Astloch', cursive;
     font-size: 3em;
@@ -128,8 +115,7 @@ button {
 footer {
     background: #433E0E;
     width: 100%;
-    position: fixed;
-    bottom: 0;
+    height: 110px;
 }
 
 footer p, footer a {
